better warnings